project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_list__tests__contact_list__test_grouped_contacts_0.snap
---
source: contacts/contacts-common/src/contact_list.rs
expression: display_group(groups)
---
0 keys:
